--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
-comrak = { path = "../comrak", features = ["shortcodes"] }
+comrak = { git = "https://github.com/blood-rogue/comrak.git", features = ["shortcodes"] }
 chrono = "0.4.24"
 syntect = "5.0.0"
 toml = "0.7.3"
