--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "md2html"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -17,3 +17,4 @@ emojis = "0.6.0"
 fancy-regex = "0.11.0"
 url = "2.3.1"
 css-minify = "0.3.1"
+colored = "2.0.0"
