--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 serde = { version = "1.0", features = ["derive"] }
 comrak = { git = "https://github.com/blood-rogue/comrak.git", features = ["shortcodes"] }
 chrono = "0.4.24"
-syntect = "5.0.0"
+syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"]}
 toml = "0.7.3"
 clap = { version = "4.2.7", features = ["derive"] }
 once_cell = "1.17.1"
